--- a/package.json
+++ b/package.json
@@ -14,13 +14,15 @@
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "styled-components": "^5.0.0",
-    "styled-reset": "^4.0.10"
+    "styled-reset": "^4.0.10",
+    "npm-run-all": "^4.1.5"
   },
   "scripts": {
     "server": "node server.js --port {1} -- 3001",
     "client": "react-scripts start",
     "start": "run-p server client",
     "build": "react-scripts build",
+    "prod": "run-p server build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -39,8 +41,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "npm-run-all": "^4.1.5"
   }
 }
