--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "styled-reset": "^4.0.10"
   },
   "scripts": {
-    "server": "node server.js --port {1} -- 3001",
+    "server": "node server.js",
     "client": "react-scripts start",
     "start": "run-p server client",
     "build": "react-scripts build",
