--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-scripts": "3.3.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
+    "serve": "^11.3.0",
     "styled-components": "^5.0.0",
     "styled-reset": "^4.0.10"
   },
@@ -24,7 +25,8 @@
     "client": "react-scripts start",
     "start": "run-p server client",
     "build": "react-scripts build",
-    "prod": "run-p build server start",
+    "serve": "serve -s build",
+    "prod": "run-p build server serve -- -{1} -- s",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
