--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "netshoes-test",
   "version": "0.1.0",
   "private": true,
+  "homepage": "netshoes-test/",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
