--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,5 +23,6 @@ jobs:
       - name: Deploy to gh-pages
         uses: actions/deploy-pages@v3
         with:
+          artifact_name: github-pages
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./public
