--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,7 @@ jobs:
     permissions:
       id-token: write
       pages: write
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
@@ -23,12 +23,14 @@ jobs:
       - name: Upload Artifact
         uses: actions/upload-artifact@master
         with:
-            name: page
-            path: build
+            name: github-pages
+            path: ./build
             if-no-files-found: error
+      - uses: actions/configure-pages@v1
+      - uses: actions/upload-pages-artifact@v1
+        with:
+          path: .
       - name: Deploy to gh-pages
         uses: actions/deploy-pages@v3
         with:
           artifact_name: github-pages
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./build
