--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,6 +31,9 @@ jobs:
         with:
           path: .
       - name: Deploy to gh-pages
+        env:
+          name: github-pages
+          url: ${{steps.deployment.outputs.page_url}}
         uses: actions/deploy-pages@v3
         with:
           artifact_name: github-pages
