--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,6 +22,7 @@ jobs:
         run: |
           npm ci
           npm run build
+          npm run server
       - name: Upload Artifact
         uses: actions/upload-pages-artifact@v1
         with:
